fixed font-sizes on smaller resolutions

--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ body {
 
 /* Landscape phones and portrait tablets */
 @media (max-width: 767px) {
-  body{font-size:16px;}
+  body{font-size:22px;}
   .button-text{font-size:1.3em;}
 }
 
